--- a/css/_main.scss
+++ b/css/_main.scss
@@ -4,19 +4,19 @@ body {
 }
 
 // 預設按鈕樣式
-.btn_linear_c1{
+.btn_linear_c1 {
     @include btn_linear(#fff, #ffff00, #f14c0a, #f8b107);
 }
 
-.btn_linear_c2{
+.btn_linear_c2 {
     @include btn_linear(#fff, #898989, #212121, #676767);
 }
 
-.btn_linear_c3{
+.btn_linear_c3 {
     @include btn_linear(#fff, #fe4436, #8e041d, #da001a);
 }
 
-.btn_linear_c4{
+.btn_linear_c4 {
     @include btn_linear(#fff, #fff, #3F67C0, #5e89e4);
 }
 
@@ -55,7 +55,6 @@ body {
             height: 100%;
             padding-bottom: 20px;
         }
-
         .hd_link {
             margin-bottom: 12px;
             ul {
@@ -63,7 +62,6 @@ body {
                 display: flex;
                 justify-content: flex-end;
             }
-           
             .hd_service {
                 display: flex;
                 align-items: center;
@@ -74,29 +72,26 @@ body {
                     margin-left: 15px;
                     position: relative;
                 }
-                .btn_cnt{
+                .btn_cnt {
                     width: 34px;
                     height: 34px;
                 }
             }
-
-            li + li {
+            li+li {
                 margin-left: 10px;
             }
         }
-
         .hd_signIn {
-            &[data-signIn="0"] > div[data-signIn="0"] {
+            &[data-signIn="0"]>div[data-signIn="0"] {
                 display: flex;
             }
-            &[data-signIn="1"] > div[data-signIn="1"] {
+            &[data-signIn="1"]>div[data-signIn="1"] {
                 display: flex;
             }
-            & > div {
+            &>div {
                 display: none;
                 justify-content: flex-end;
             }
-
             .signIn_ipt {
                 display: flex;
             }
@@ -121,12 +116,11 @@ body {
                     width: 25px;
                     height: 25px;
                     flex-shrink: 0;
-                    & .btn_cnt{
-                        background:url(../images/icon/icon-Q.png) no-repeat center;
+                    & .btn_cnt {
+                        background: url(../images/icon/icon-Q.png) no-repeat center;
                     }
                 }
             }
-
             label {
                 width: 155px;
                 height: 100%;
@@ -152,12 +146,11 @@ body {
                     @include fullNone;
                 }
             }
-
             .signIn_msg {
                 display: flex;
                 color: $clr_Txt;
                 font-size: 0.9rem;
-                & > div {
+                &>div {
                     display: flex;
                     align-items: center;
                     margin-right: 10px;
@@ -181,7 +174,6 @@ body {
                 }
             }
         }
-
         .signIn_code {
             margin-right: 10px;
             display: flex;
@@ -193,19 +185,16 @@ body {
                 width: 80px;
             }
         }
-
         .signIn_btn {
             display: flex;
-            .btn {   
-                min-width: 80px;   
+            .btn {
+                min-width: 80px;
             }
-
-            .btn + .btn{
+            .btn+.btn {
                 margin-left: 5px;
             }
         }
     }
-
     // hd_menu start
     .hd_menu {
         width: 100%;
@@ -219,7 +208,6 @@ body {
         }
         ul {
             height: 100%;
-
             font-size: 1rem;
             font-weight: bold;
             display: flex;
@@ -241,8 +229,7 @@ body {
                 }
             }
         }
-
-        li + li {
+        li+li {
             margin-left: 75px;
         }
         .menu_game {
@@ -281,7 +268,6 @@ body {
             left: unset;
         }
     }
-    
     .rightTool {
         width: 99px;
         top: calc(100vw * 0.1986 + 55px);
@@ -293,26 +279,26 @@ body {
             left: unset;
             margin-top: 100px;
         }
-        .todayGame{
+        .todayGame {
             width: 100%;
             position: absolute;
-            .god{
+            .god {
                 width: 220px;
                 left: -60px;
                 cursor: pointer;
                 position: relative;
+                animation: pudding 1s infinite linear;
             }
         }
     }
-    @media screen and (min-width: 1920px){
+    @media screen and (min-width: 1920px) {
         .rightTool,
         .leftTool {
-            top: calc(1920px * 0.1986 + 55px );
-        } 
-     }
-
+            top: calc(1920px * 0.1986 + 55px);
+        }
+    }
     .floatAd {
-        & > img {
+        &>img {
             display: block;
             margin-bottom: 10px;
         }
@@ -366,14 +352,12 @@ body {
         z-index: -1;
         opacity: 0.4;
     }
-
     .contBox-min {
         width: 100%;
         max-width: $count-minW;
         margin: auto;
         padding: 0 20px;
     }
-
     .contBox-max {
         width: 100%;
         max-width: $count-maxW;
@@ -389,11 +373,10 @@ body {
     margin: auto;
     color: $clr_ftTxt;
     position: relative;
-
     // ft_top
     .ft_top {
         background-color: #313131;
-        & > div {
+        &>div {
             width: 100%;
             max-width: 1800px;
             min-width: $count-minW;
@@ -404,7 +387,6 @@ body {
             align-items: flex-end;
             justify-content: space-between;
         }
-
         .ft_msg {
             line-height: 25px;
         }
@@ -412,7 +394,7 @@ body {
             ul {
                 display: flex;
             }
-            li + li {
+            li+li {
                 margin-left: 20px;
             }
             .ft_icon {
@@ -421,11 +403,10 @@ body {
             }
         }
     }
-
     // ft_bottom
     .ft_bottom {
         background-color: #121210;
-        & > div {
+        &>div {
             max-width: 1800px;
             min-width: $count-minW;
             min-height: calc(275px - 160px);
@@ -435,7 +416,6 @@ body {
             align-items: center;
             justify-content: space-between;
         }
-
         .copyright {
             font-size: 1.2rem;
         }
@@ -445,7 +425,6 @@ body {
                 font-size: 1rem;
                 font-weight: bold;
             }
-
             li {
                 transition: 0.3s;
                 &:active {
@@ -457,12 +436,11 @@ body {
                     }
                 }
             }
-            li + li {
+            li+li {
                 margin-left: 30px;
             }
         }
     }
-
     // ftAd
     .ftAd {
         width: 100%;
@@ -473,7 +451,7 @@ body {
         z-index: 9;
         display: flex;
         justify-content: space-between;
-        & > div {
+        &>div {
             position: relative;
             pointer-events: auto;
             &.on {
@@ -516,4 +494,29 @@ body {
     }
 }
 
-
+@keyframes pudding {
+    0% {
+        transform: scaleX(1);
+      }
+      30% {
+        transform: scale3d(0.95, 1.1, 1);
+      }
+      40% {
+        transform: scale3d(1.11, 0.85, 1);
+      }
+      40% {
+        transform: scale3d(1.11, 0.85, 1);
+      }
+      50% {
+        transform: scale3d(0.95, 1.1, 1);
+      }
+      65% {
+        transform: scale3d(1.05, 1, 1);
+      }
+      75% {
+        transform: scale3d(1, 1.05, 1);
+      }
+      100% {
+        transform: scaleX(1);
+      }
+  }
