--- a/css/all.css
+++ b/css/all.css
@@ -107,6 +107,191 @@ img {
   vertical-align: middle;
 }
 
+.swipslider {
+  width: 100%;
+  height: calc(100vw * 0.182);
+  position: relative;
+  overflow: hidden;
+  display: block;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+@media screen and (min-width: 1920px) {
+  .swipslider {
+    height: 350px;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .swipslider {
+    height: 230px;
+  }
+}
+
+.swipslider .sw-slides {
+  display: block;
+  padding: 0;
+  list-style: none;
+  width: 100%;
+  height: 100%;
+  white-space: nowrap;
+  font-size: 0;
+  -webkit-transform: translateX(0);
+  transform: translateX(0);
+  position: absolute;
+  bottom: 0;
+}
+
+.swipslider .sw-slide {
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  display: inline-block;
+  position: relative;
+}
+
+.swipslider .sw-slide .sw-content {
+  width: 100%;
+  height: 100%;
+  margin-left: 0;
+  margin-right: 0;
+  font-size: 14px;
+}
+
+.swipslider .sw-slide > img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  max-height: 100%;
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.sw-next-prev {
+  font-family: "Courier New", Courier, monospace;
+  height: 50px;
+  width: 50px;
+  text-align: center;
+  vertical-align: middle;
+  position: absolute;
+  line-height: 50px;
+  font-size: 30px;
+  font-weight: bolder;
+  color: rgba(160, 160, 160, 0.53);
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  background-color: rgba(255, 255, 255, 0);
+  border-radius: 50%;
+  text-decoration: none;
+  -webkit-transition: all .2s ease-out;
+  transition: all .2s ease-out;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.sw-next-prev:hover {
+  background-color: rgba(255, 255, 255, 0.74);
+}
+
+.sw-next-prev:active {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.sw-prev {
+  left: 2%;
+}
+
+.sw-prev::after {
+  content: '<';
+}
+
+.sw-next {
+  right: 2%;
+}
+
+.sw-next::after {
+  content: '>';
+}
+
+.sw-bullet {
+  position: absolute;
+  bottom: 2%;
+  list-style: none;
+  display: block;
+  width: 100%;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+}
+
+.sw-bullet li {
+  width: 10px;
+  height: 10px;
+  background-color: rgba(160, 160, 160, 0.53);
+  border-radius: 50%;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-transition: all .2s ease-out;
+  transition: all .2s ease-out;
+}
+
+.sw-bullet li:hover {
+  background-color: rgba(255, 255, 255, 0.74);
+}
+
+.sw-bullet li.active {
+  background-color: rgba(255, 255, 255, 0.5);
+  -webkit-box-shadow: 0 0 2px rgba(160, 160, 160, 0.53);
+          box-shadow: 0 0 2px rgba(160, 160, 160, 0.53);
+}
+
+.sw-bullet li:not(:last-child) {
+  margin-right: 5px;
+}
+
+.marquee_body {
+  width: 100%;
+  height: 100%;
+  display: block;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  line-height: 1;
+  position: relative;
+  overflow: hidden;
+  color: #fff;
+}
+
+.marquee_body li {
+  height: 100%;
+  position: absolute;
+  top: -999em;
+  left: 0;
+  display: block;
+  white-space: nowrap;
+  font: 14px Arial, Helvetica, sans-serif;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 body {
   background-color: #0b2d53;
   position: relative;
@@ -1135,6 +1320,11 @@ body {
 .marquee .marqueeBox {
   max-width: 1280px;
   margin: auto;
+}
+
+.marquee .marqueeBox .marquee_body {
+  max-width: 1050px;
+  cursor: pointer;
 }
 
 .marquee .marqueeBox > div {
