--- a/css/all.scss
+++ b/css/all.scss
@@ -2,6 +2,10 @@
 @import "var";
 @import "method";
 
+// === 外掛 ===
+@import "swipeslider"; // 輪播
+@import "marquee";     // 跑馬燈
+
 // === 頁面設定 ===
 @import "main";
 @import "home";
